--- a/bento.html
+++ b/bento.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href=".\bento.css">
   </head>
   <body>
-    <main>
-        <h1>Welcome to My Website</h1>  
+    <main class="container">
+      <div class="col-left">
+        <div class="row row1"></div>
+        <div class="row row2"></div>
+        <div class="row row3">
+          <div class="row right"></div>
+          <div class="row left"></div>
+        </div>
+      </div>
+      <div class="col-right">
+        <div class="row top"></div>
+        <div class="row bot"></div>
+      </div>
     </main>
-	<script src="index.js"></script>
   </body>
 </html>
